--- a/gk2019/Polygons/Polygons.csproj
+++ b/gk2019/Polygons/Polygons.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hierarchy.cs" />
+    <Compile Include="PolygonManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
