--- a/gk2019/Polygons/Polygons.csproj
+++ b/gk2019/Polygons/Polygons.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Hierarchy.cs" />
+    <Compile Include="JsonPolygon.cs" />
     <Compile Include="PolygonManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
