--- a/gk2019/Lightning/Lightning.csproj
+++ b/gk2019/Lightning/Lightning.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BmpWrapper.cs" />
     <Compile Include="Drawer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -77,8 +78,8 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -97,6 +98,18 @@
       <Project>{2555cffa-4dc6-442d-bab3-b33194ccf7f2}</Project>
       <Name>Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bmp_1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gods.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\normal_1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\normal_2.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
