--- a/gk2019/Lightning/Lightning.csproj
+++ b/gk2019/Lightning/Lightning.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BmpWrapper.cs" />
+    <Compile Include="ColorHelper.cs" />
     <Compile Include="Drawer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -100,9 +101,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\bmp_1.bmp" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\gods.bmp" />
   </ItemGroup>
   <ItemGroup>
@@ -110,6 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\normal_2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\normal_3.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
