--- a/gk2019/Lightning/Lightning.csproj
+++ b/gk2019/Lightning/Lightning.csproj
@@ -100,22 +100,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\gods.bmp" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\normal_1.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\normal_2.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\normal_3.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\normal_4.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\normal_5.png" />
+    <None Include="Resources\hp.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
