Add triangle rendering

--- a/gk2019/OpenGL/OpenGL.vcxproj
+++ b/gk2019/OpenGL/OpenGL.vcxproj
@@ -146,6 +146,14 @@
   <ItemGroup>
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="tutorial.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tutorial.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="pixel.vs" />
+    <None Include="vertex.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
