--- a/gk2019/OpenGL/OpenGL.vcxproj.filters
+++ b/gk2019/OpenGL/OpenGL.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClCompile Include="tutorial.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tutorial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -37,7 +43,7 @@
     <None Include="vertex.vs">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="pixel.vs">
+    <None Include="pixel.ps">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
