--- a/gk2019/OpenGL/OpenGL.vcxproj
+++ b/gk2019/OpenGL/OpenGL.vcxproj
@@ -149,14 +149,13 @@
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="texture.cpp" />
-    <ClCompile Include="tutorial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mesh.h" />
+    <ClInclude Include="meshes.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="texture.h" />
-    <ClInclude Include="tutorial.h" />
     <ClInclude Include="vertex.h" />
   </ItemGroup>
   <ItemGroup>
