Work on camera class

--- a/gk2019/OpenGL/OpenGL.vcxproj.filters
+++ b/gk2019/OpenGL/OpenGL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="light.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader.h">
