--- a/gk2019/OpenGL/OpenGL.vcxproj
+++ b/gk2019/OpenGL/OpenGL.vcxproj
@@ -144,6 +144,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="camera.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="light.cpp" />
     <ClCompile Include="main.cpp" />
