--- a/gk2019/OpenGL/OpenGL.vcxproj
+++ b/gk2019/OpenGL/OpenGL.vcxproj
@@ -155,9 +155,12 @@
   <ItemGroup>
     <ClInclude Include="camera.h" />
     <ClInclude Include="light.h" />
+    <ClInclude Include="lights.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="meshes.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="shaders.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="vertex.h" />
