--- a/gk2019/OpenGL/OpenGL.vcxproj
+++ b/gk2019/OpenGL/OpenGL.vcxproj
@@ -182,6 +182,8 @@
     <ClInclude Include="vertex.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="gouraud.ps" />
+    <None Include="gouraud.vs" />
     <None Include="light.ps" />
     <None Include="light.vs" />
     <None Include="pixel.ps" />
